# basalt-mvp

./: .gitignore  CHANGELOG.md  LICENSE  PHASE1_HANDOFF.md  PHASE2_HANDOFF.md  PHASE3_HANDOFF.md  PHASE4_HANDOFF.md  PHASE5_HANDOFF.md  PHASE6_HANDOFF.md  PHASE7_DELIVERY_MANIFEST.json  PHASE7_HANDOFF.md  README.md  basalt.features.json  basalt.yaml  pyproject.toml
basalt_mvp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
basalt_proof/: __init__.py  agent_runtime.py  architecture.py  ast_graph.py  autofix.py  beta_models.py  cli.py  command_center.py  command_center_server.py  compare.py  config.py  context_compiler.py  dashboard.py  deployment_manager.py  design_system.py  epoch_planner.py  factory_models.py  git_pr.py  job_queue.py  knowledge_graph.py  model_router.py  models.py  mutation.py  operations.py  patch_engine.py  patches.py  policy_kernel.py  prevention_engine.py  preview.py  private_beta.py  product_brain.py  proof.py  provider_registry.py  quality_check.py  release.py  report.py  runner.py  security.py  software_factory.py  state_coordinator.py  (+4 more)
docs/: AGENT_SAFE_FIXES.md  ALPHA_AI_SOFTWARE_FACTORY.md  ALPHA_V2.md  AUTO_FIX_V1_1.md  BASALT_BRAND_INTEGRATION.md  BASALT_DESIGN_SYSTEM.md  COMMAND_CENTER.md  COMMAND_CENTER_SECURITY.md  CONTEXT_COMPILER.md  DEMO_SCRIPT.md  DEPLOYMENT_CONTROL_PLANE.md  DURABLE_JOB_RUNTIME.md  EPOCH_PLANNER_AND_PATCH_AGGREGATOR.md  FINAL_MVP_V1_5_SCOPE.md  MODEL_PROVIDER_INTEGRATIONS.md  MODEL_ROUTER_AND_ORCHESTRATOR.md  MVP_SCOPE.md  PHASE1_COMPLETION.md  PHASE2_COMPLETION.md  PHASE2_VALIDATION_REPORT.md  PHASE3_COMPLETION.md  PHASE3_VALIDATION_REPORT.md  PHASE4_COMPLETION.md  PHASE4_VALIDATION_REPORT.md  PHASE5_COMPLETION.md  PHASE5_VALIDATION_REPORT.md  PHASE6_COMPLETION.md  PHASE6_VALIDATION_REPORT.md  PHASE7_MASTER_SPEC.md  PHASE7_RC4_ACCEPTANCE_REMEDIATION.md  (+27 more)
(+29 files in other folders)
