[project]
name = "basalt-mvp"
version = "2.4.0a1"
description = "Basalt v2.4 Alpha AI Software Factory: product intent, prevention-first plans, deterministic state, dependency-safe epochs, governed specialist agents, model routing, proof-backed assembly, and the Basalt Command Center."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
basalt = "basalt_proof.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
basalt_proof = ["webui/*.html", "webui/*.css", "webui/*.js"]
