[project]
name = "basalt-mvp"
version = "2.5.0b1"
description = "Basalt v2.5 Private Beta Full Build System: persistent workspaces, teams, RBAC, durable jobs, provider integrations, isolated builds, verified deployment artifacts, and the Basalt Command Center."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
basalt = "basalt_proof.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
basalt_proof = ["webui/*.html", "webui/*.css", "webui/*.js", "webui/brand/*.png"]
