[project]
name = "basalt-mvp"
version = "3.0.0rc4"
description = "Basalt v3.0 Production Candidate: verified Build Workspace, Command Center, governed engineering workflows, and production control foundations."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
basalt = "basalt_proof.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
basalt_proof = ["webui/*.html", "webui/*.css", "webui/*.js", "webui/brand/*.png"]
